--- a/src/components/audio/components/audio-slider/AudioSlider.css
+++ b/src/components/audio/components/audio-slider/AudioSlider.css
@@ -1,16 +1,10 @@
 .progress-bar{
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    width: 100%;
-    max-width: calc(100% - 90px);
-    margin: 0 auto;
+    margin: 0 20px;
     box-sizing: border-box;
     height: 1px;
     background-color: #acacac;
-    margin-left: 20px;
 }
+
 
 .current-progress-bar{
     width: 0px;
@@ -26,4 +20,9 @@
     margin-top: -5px;
     border-radius: 50%;
     cursor: pointer;
+}
+.endpoint-container{
+    display: flex;
+    justify-content: space-between;
+    font-size: 11px;
 }
