--- a/src/components/audio/Audio.css
+++ b/src/components/audio/Audio.css
@@ -1,12 +1,11 @@
 .audi-bar{
     position: relative;
-    height: 45px;
     background-color: #263238;
     margin-bottom: 10px;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    padding-top: 9px;
+    padding: 7px 10px;
 }
 
 .cursor{
@@ -22,3 +21,17 @@
     right: 17px;
     bottom: 0;
 }
+.file-name-container{
+    width: 64%;
+    bottom: 2px;
+    font-size: 11px;
+    text-align: center;
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%);
+    max-width: 400px;
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+    margin: 0 auto;
+ }
