--- a/src/App.css
+++ b/src/App.css
@@ -1,22 +1,35 @@
 body{
-    background-color: black;
-    color: white;
+    margin: 0;
+    padding: 0;
 }
 
 audio {
     width: 100%;
     margin: 0 auto;
 }
-
-audio::-webkit-media-controls-panel {
-    background-color: #333;
-    color: #fff;
-    border-radius: 0px;
-    /* Add more styles as needed */
+.open-area{
+  height: calc(100vh - 41px);
+  display: flex;
+  justify-content: center;
 }
 
-audio::-webkit-media-controls-volume-slider {
-    position: absolute;
-    background-color: #999;
-    /* Add more styles as needed */
-}
+/* width */
+::-webkit-scrollbar {
+    width: 5px;
+  }
+  
+  /* Track */
+  ::-webkit-scrollbar-track {
+    box-shadow: inset 0 0 5px grey; 
+    border-radius: 5px;
+  }
+   
+  /* Handle */
+  ::-webkit-scrollbar-thumb {
+    border-radius: 5px;
+  }
+  
+  /* Handle on hover */
+  ::-webkit-scrollbar-thumb:hover {
+    background: #575656; 
+  }
