--- a/src/components/audio/Audio.css
+++ b/src/components/audio/Audio.css
@@ -1,11 +1,19 @@
+/* #fb04fa */
 .audi-bar{
     position: relative;
-    background-color: #263238;
     margin-bottom: 10px;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
     padding: 7px 10px;
+    border-radius: 5px;
+    background-color: #ededed;
+}
+.back-color-light{
+    background-color: rgb(251 4 251 / 18%)
+}
+.back-color-dark{
+    background-color: #263238;
 }
 
 .cursor{
@@ -35,3 +43,24 @@
     text-overflow: ellipsis;
     margin: 0 auto;
  }
+
+
+ .marquee-container {
+    width: 100%;
+    overflow: hidden;
+    white-space: nowrap;
+}
+
+.marquee-content {
+    display: inline-block;
+    animation: marquee-scroll 15s linear infinite;
+}
+
+@keyframes marquee-scroll {
+    from {
+        transform: translateX(100%);
+    }
+    to {
+        transform: translateX(-100%);
+    }
+}
