--- a/src/pages/media_play_list/MediaPlayList.css
+++ b/src/pages/media_play_list/MediaPlayList.css
@@ -2,3 +2,9 @@
     display: flex;
     justify-content: end;
 }
+.play-list{
+   display: flex;
+   justify-content: center;
+   flex-direction: column;
+   margin: 0 10px;
+}
