--- a/src/components/controller/MediaController.css
+++ b/src/components/controller/MediaController.css
@@ -15,7 +15,7 @@
   /***** Chrome, Safari, Opera and Edge Chromium styles *****/
   /* slider track */
   .brogress-bar::-webkit-slider-runnable-track {
-    background-color: rgb(126 34 206 / var(--tw-bg-opacity));
+    /* background-color: rgb(126 34 206 / var(--tw-bg-opacity)); */
     border-radius: 0.5rem;
     height: 3px;  
     width: 100%;
@@ -80,9 +80,9 @@ figure[data-fullscreen=true] .controls .progress {
 	width:68%;
 }
 
-.brogress-bar-snap::-webkit-slider-runnable-track {
+/* .brogress-bar-snap::-webkit-slider-runnable-track {
   background-color: rgb(51 65 85 / var(--tw-bg-opacity));
-}
+} */
 .brogress-bar-snap::-webkit-slider-thumb {
    background-color: rgb(203 213 225 / var(--tw-border-opacity));
 }
@@ -93,9 +93,9 @@ figure[data-fullscreen=true] .controls .progress {
 
 
 @media (prefers-color-scheme: dark){
-    .brogress-bar::-webkit-slider-runnable-track {
+    /* .brogress-bar::-webkit-slider-runnable-track {
       background-color: rgb(51 65 85 / var(--tw-bg-opacity));
-    }
+    } */
     .brogress-bar::-webkit-slider-thumb {
        background-color: rgb(203 213 225 / var(--tw-border-opacity));
     }
